fixed img alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -27,7 +27,8 @@ h1 {
 
 h2 {
     margin: 0px;
-    padding-top: 50px;
+    padding-top: 150px;
+    font-size: 2em;
     font-family: Zen Maru Gothic, Helvetica, sans-serif;
 }
 
@@ -68,6 +69,7 @@ header p {
 .redesSociais img {
     max-width: 50px;
     padding: 5px;
+    margin-left: -5px;
 
 }
 #pFrontEnd {
@@ -76,9 +78,12 @@ header p {
 #introText {
     color: white;
     max-width: 600px;
+    font-size: 0.8em;
 }
 
 #faceScreen {
     background-color: rgb(30, 35, 35);
+    height: 90vh;
+    padding-left: 10%;
 
 }
